Map a module name onto any resolved jar by renaming it
@jenesis.alias gives a repository artifact without module identity a module
name this project chooses. It synthesizes nothing: it names a jar the resolved
closure already holds and renames it in resolved/, so the JDK derives exactly
the automatic module the project asked for, and javac and java agree on it
because both derive it the same way. The jar's bytes are never touched, so a
pinned checksum keeps describing the file on the command line, and the file in
resolved/ is a hard link, so the shared artifact cache stays untouched too.

An alias need not be required: it maps a name onto any jar in the tree,
including a transitive dependency the project never mentions. An alias that
names nothing in the tree is an error. A requires of an aliased name is
translated into a requirement on the aliased Maven coordinate.

Declarations travel through the Jenesis-Aliases manifest header, so a consumer
inherits a name without redeclaring it, and Dependencies merges the local
declarations with the headers of every resolved jar into one validated view: a
name claimed for two jars, two names for one jar, a target that already carries
a module identity and a name a resolved module already holds all fail the build.
Jpx applies the same rename inside an installation.

The module-graph corrections a build has to add to a command line are collected
in one accumulator, build.jenesis.ModuleGraph, replacing the
selfContainedModuleGraph boolean six steps each recomputed. A graph that is not
self-contained - an automatic module on the module path, or any class-path jar
beside it - is rooted with --add-modules ALL-MODULE-PATH,ALL-DEFAULT. The second
root set is new: a jar that declares no requires of its own was written
expecting the whole platform to be there, which a -m launch does not root.

Nothing else is relaxed. No module is granted readability of the unnamed module,
so a dependency a module needs to reference is promoted by alias