@@ -2,6 +2,7 @@ package build.jenesis.test.step;
 
 import module java.base;
 import module org.junit.jupiter.api;
+import build.jenesis.BuildStep;
 import build.jenesis.BuildStepArgument;
 import build.jenesis.BuildStepContext;
 import build.jenesis.BuildStepResult;
@@ -45,6 +46,50 @@ public class JavaTest {
         assertThat(result.next()).isTrue();
         assertThat(supplement.resolve("output")).content().isEqualTo("Hello world!");
         assertThat(supplement.resolve("error")).isEmptyFile();
+    }
+
+    @Test
+    public void modular_run_beside_a_class_path_jar_roots_the_module_path() throws IOException {
+        Path folder = Files.createDirectories(classes.resolve(Javac.CLASSES + "sample"));
+        try (InputStream input = Sample.class.getResourceAsStream(Sample.class.getSimpleName() + ".class")) {
+            Files.copy(requireNonNull(input), folder.resolve("Sample.class"));
+        }
+        Path artifacts = Files.createDirectories(classes.resolve(BuildStep.ARTIFACTS));
+        Files.writeString(Files.createDirectories(root.resolve("named-sources")).resolve("module-info.java"),
+                "module sample.run {\n}\n");
+        Path compiled = Files.createDirectories(root.resolve("named-classes"));
+        assertThat(ToolProvider.findFirst("javac").orElseThrow().run(System.out, System.err,
+                "-d", compiled.toString(),
+                root.resolve("named-sources/module-info.java").toString())).isZero();
+        try (JarOutputStream jar = new JarOutputStream(Files.newOutputStream(artifacts.resolve("named.jar")))) {
+            jar.putNextEntry(new JarEntry("module-info.class"));
+            jar.write(Files.readAllBytes(compiled.resolve("module-info.class")));
+            jar.closeEntry();
+        }
+        try (JarOutputStream jar = new JarOutputStream(Files.newOutputStream(artifacts.resolve("plain.jar")))) {
+            jar.putNextEntry(new JarEntry("plain/Lib.class"));
+            jar.write(new byte[]{1, 2, 3});
+            jar.closeEntry();
+        }
+        AtomicReference<List<String>> captured = new AtomicReference<>();
+        Function<List<String>, ProcessHandler.OfProcess> base = ProcessHandler.OfProcess.ofJavaHome("bin/java");
+        Function<List<String>, ProcessHandler.OfProcess> factory = arguments -> {
+            captured.set(arguments);
+            return base.apply(arguments);
+        };
+        BuildStepResult result = Java.of(factory, PathPlacement.INFERRED, false, "-version").apply(
+                Runnable::run,
+                new BuildStepContext(previous, next, supplement),
+                new LinkedHashMap<>(Map.of("classes", new BuildStepArgument(
+                        classes,
+                        Map.of(Path.of("artifacts/named.jar"), Checksum.of(ChecksumStatus.ADDED),
+                                Path.of("artifacts/plain.jar"), Checksum.of(ChecksumStatus.ADDED)))))).toCompletableFuture().join();
+
+        assertThat(result.next()).isTrue();
+        assertThat(captured.get())
+                .as("a jar without a module name lands on the class path, expecting the whole platform")
+                .containsSubsequence("--add-modules", "ALL-MODULE-PATH,ALL-DEFAULT")
+                .doesNotContain("--add-reads");
     }
 
     @Test
